# hubspot-dedupe

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
data/: sample_contacts.csv
docs/: app.js  index.html  styles.css
hubspot-dedupe/: .env.example  CLAUDE.md  README.md
hubspot-dedupe/src/_golden/: weighting.py
hubspot-dedupe/src/hubspot_dedupe/: __init__.py  io.py
hubspot-dedupe/src/hubspot_dedupe/web/static/: app.js
hubspot-dedupe/tests/: test_engine.py
scripts/: cleanup-task.sh  list-tasks.sh  new-task.sh
src/hubspot_dedupe/: cli.py  engine.py  io.py  models.py  normalization.py  scoring.py
src/hubspot_dedupe/web/: __init__.py  app.py
src/hubspot_dedupe/web/samples/: sample_companies.csv
src/hubspot_dedupe/web/static/: app.css  index.html
tests/: test_engine.py  test_golden_weighting.py  test_web_app.py
