[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspot-dedupe"
version = "0.1.0"
description = "A deterministic deduplication engine for HubSpot exports."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

